# family-todo

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  PROJECT_FOUNDATION_SUMMARY.md  README.md  docker-compose.yml  env.json  local-env.json  planning.md  samconfig.toml  template.yaml
.claude/: session-handoff-memo.md
.github/workflows/: backend.yml  ci-cd.yml  frontend.yml  integration.yml
.kiro/specs/family-todo-serverless/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
backend/.cargo/: config.toml
backend/command-handler/: Cargo.toml  Makefile
backend/command-handler/src/: commands.rs  handlers.rs  main.rs  responses.rs
backend/event-processor/: Cargo.toml  Makefile
backend/event-processor/src/: error_handling.rs  main.rs  processor.rs
backend/query-handler/: Cargo.toml  Makefile
backend/query-handler/src/: handlers.rs  main.rs  queries.rs  responses.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs
backend/shared/src/domain/: aggregates.rs  error.rs  events.rs  identifiers.rs  mod.rs
backend/shared/src/infra/: dynamodb.rs  event_store.rs  mod.rs
backend/shared/src/telemetry/: logger.rs  metrics.rs  mod.rs  tracer.rs
backend/snapshot-manager/: Cargo.toml  Makefile
backend/snapshot-manager/src/: main.rs
backend/src/: db.rs  domain.rs  error.rs  handlers.rs  http_handler.rs  lib.rs  main.rs  models.rs  router.rs
backend/tests/: api_integration_tests.rs
backend/tests/integration/: Cargo.toml
backend/tests/integration/src/: dynamodb_helpers.rs  fixtures.rs  helpers.rs  lib.rs
backend/tests/integration/tests/: domain_logic_test.rs  dynamodb_integration_test.rs
backend/todo-api/: Cargo.toml
backend/todo-api/src/: lib.rs  main.rs
backend/todo-domain/: Cargo.toml
backend/todo-domain/src/: lib.rs
crates/command-handler/: Cargo.toml
crates/command-handler/src/: main.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  events.rs  family.rs  lib.rs  todo.rs
crates/event-processor/: Cargo.toml
crates/event-processor/src/: main.rs
crates/family-invitation/: Cargo.toml
crates/family-invitation/src/: main.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: dynamodb.rs  family_repository.rs  lib.rs  models.rs  optimistic_lock.rs  repositories.rs  retry.rs
crates/infrastructure/tests/: integration_tests.rs
crates/lambda-authorizer/: Cargo.toml
crates/lambda-authorizer/src/: main.rs
crates/query-handler/: Cargo.toml
crates/query-handler/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  config.rs  errors.rs  lambda_error.rs  lib.rs  metrics.rs  retry.rs  telemetry.rs  tracing.rs
crates/snapshot-manager/: Cargo.toml
crates/snapshot-manager/src/: main.rs
crates/token-refresh/: Cargo.toml
crates/token-refresh/src/: main.rs
docs/: DEPLOYMENT.md  DEVELOPMENT.md  github-actions-setup.md
docs/api/: README.md
docs/architecture/: OVERVIEW.md  PLANNING.md  todo-aws-serverless-architecture.md
docs/sow/: milestone1-event-store-sow.md
frontend/: .env.example  .gitignore  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  todos.ts
frontend/src/components/: AddTodo.tsx  Layout.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/src/config/: amplify.ts  constants.ts  environment.ts
frontend/src/hooks/: useTodos.ts
frontend/src/pages/: Settings.tsx  TodoDetail.tsx  TodoList.tsx
frontend/src/test/: setup.ts
frontend/src/types/: api.ts  auth.ts  index.ts  todo.ts
frontend/src/utils/: api.ts  date.ts  formatting.ts  index.ts  storage.ts  validation.ts
frontend/tests/e2e/: basic.spec.ts  todo-operations.spec.ts
frontend/tests/e2e/utils/: test-helpers.ts
infra/: .gitignore  samconfig.toml  template.yaml
infra/events/: event.json
scripts/: health-check.sh  setup-dev.sh  setup-local-db.sh
tests/: package.json  setup.js  vitest.config.js
tests/load/: k6-script.js
tests/scenarios/: todo-lifecycle.test.js
tests/scripts/: smoke-test.js
