[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_http = "0.15.1"
http = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = "1.1"
aws-sdk-dynamodb = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
http = "1.0.0"
