[workspace]
resolver = "2"
members = [
    "shared",
    "command-handler",
    "query-handler", 
    "event-processor",
    "snapshot-manager",
    "tests/integration",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ulid = "1.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
aws-config = "1.1"
aws-sdk-dynamodb = "1.17"
aws_lambda_events = "0.15"
lambda_runtime = "0.8"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["trace"] }
tracing-opentelemetry = "0.22"
once_cell = "1.19"