[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Axum-based HTTP API for family todo app."
authors = ["family-todo maintainers"]

[lib]
name = "todo_api"
path = "src/lib.rs"

[[bin]]
name = "todo-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7" }
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
todo-domain = { path = "../todo-domain" }
ulid = "1.1"
thiserror = "1.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
