[package]
name = "todo-domain"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Domain model for family todo app (Event Sourcing + CQRS)."
authors = ["family-todo maintainers"]

[dependencies]
# 将来のシリアライズを見据えて serde をオプショナルに追加
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"

[dev-dependencies]
# プロパティベーステスト（推奨）
proptest = "1.4"
