[package]
name = "command-handler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "command-handler"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
aws-config = "1.0"
aws-sdk-cloudwatch = "1.0"