[package]
name = "event-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event-processor"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
aws_lambda_events = { workspace = true }
thiserror = { workspace = true }