[package]
name = "family-invitation"
version = "0.1.0"
edition = "2021"

[dependencies]
# AWS SDK
aws-config = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-ses = "1.0"
aws-sdk-cognitoidentityprovider = "1.0"

# Lambda runtime
lambda_runtime = "0.8"
aws_lambda_events = "0.15"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
http = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
ulid = "1.0"

# Email template
handlebars = "4.0"

# Local dependencies
domain = { path = "../domain" }
shared = { path = "../shared" }
infrastructure = { path = "../infrastructure" }