[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared = { path = "../shared" }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures = "0.3"