[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
uuid = { workspace = true }
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
http = "1.0"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json"] }
aws-config = "1.0"
aws-sdk-cognitoidentityprovider = "1.0"
domain = { path = "../domain" }
lambda_runtime = "0.8"
tokio = { workspace = true }
rand = "0.8"