[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"