[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
tokio-test = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Lambda関数統合テスト用追加依存関係
aws_lambda_events = "0.15"

[dev-dependencies]
tokio-test = "0.4"